--- a/index.html
+++ b/index.html
@@ -13,28 +13,29 @@
 <body class="body">
 
 	<header id="header" class="header">
-			<nav class="menu">
-					<ul class="rayas">
+		<div class="logo-cabecera">
+			<img src="images/logo.png" alt="logo-equipo"/>
+		</div>
+			<nav>
+				<ul class="menu">
 						<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
 						<li><img class="preview" src="images/preview1.jpg" alt="vista previa"></li>
 						<li><img class="print" src="images/imprimir.jpg" alt="icono imprimir"></li>
 						<li><a href="about-us.html">About us</a></li>
-
 				</ul>
+
 			</nav>
-			<div>
-				<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/></div>
+
 		</header>
+		<h1>Crea tu propio CV</h1>
 	<section class="personalizatucv">
-		<ul>
-			<li class="perscolor">Elige el color</li>
-			<li class="persfuente">Elige la fuente</li>
-			<li class="persestilo">Elige el estilo</li>
-		</ul>
-	</section>
-	<section class="text-principal">
-		<p>Crea tu propio CV</p>
-	</section>
+
+			<ul>
+				<li class="perscolor"><img src="images/paleta.png"></li>
+				<li class="persfuente"><img src="images/fuente.png"</li>
+				<li class="persestilo"><img src="">otro</li>
+			</ul>
+			</section>
 	<section class="forms">
 		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
 
