fixed styles contact page and make it responsive

--- a/about-us.html
+++ b/about-us.html
@@ -10,9 +10,21 @@
 	<title>Crea tu CV- Sobre Nosotras</title>
 </head>
 <body>
-	<header class="header">
-		<a href="index.html#header"><img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/></a>
-	</header>
+	<header id="header" class="header">
+		<div class="logo-cabecera">
+			<img src="images/logo.png" alt="logo-equipo"/>
+		</div>
+			<nav>
+				<ul class="menu">
+						<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
+						<li><img class="preview" src="images/preview1.jpg" alt="vista previa"></li>
+						<li><img class="print" src="images/imprimir.jpg" alt="icono imprimir"></li>
+						<li><a href="about-us.html">About us</a></li>
+				</ul>
+
+			</nav>
+
+		</header>
 	<main class="principal-content">
 		<h1 class="title">Un poco sobre nosotras</h1>
 		<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
