--- a/firstpage.html
+++ b/firstpage.html
@@ -4,23 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/reset.css">
-	<link rel="stylesheet" href="styles/style.css">
 	<link rel="stylesheet" href="styles/cabecera.css">
+	<link rel="stylesheet" href="styles/style.css">
+
 	<title>Crea tu CV</title>
 </head>
 <body>
-	<header id="header" class="header">
-		<img class="logo-cabecera" src="images/logo.png" alt="logo-equipo"/>
-	</header>
-
 	<main class="background">
-		<div class="buttonintro">
-			<form action="index.html">
-    <input type=submit value="Crea tu CV" class="">
-			</form>
-
-		</div>
-	</main>
+<div class="principal-logo"><img src="images/logo.png" alt=""></div>
+		<h1 class="title"><a href="index.html#header">Crea tu CV</a></h1>
+  	</main>
 
 	<footer class="footer">
 		<p class="copy">Copyright &copy;NaN!</p>
