--- a/index.html
+++ b/index.html
@@ -1,316 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" href="styles/reset.css">
-	<link rel="stylesheet" href="styles/style.css">
-	<link rel="stylesheet" href="styles/cabecera.css">
-	<link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
+	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Crea tu CV online</title>
+	<link rel="stylesheet" href="styles/reset.css">
+	<link rel="stylesheet" href="styles/cabecera.css">
+	<link rel="stylesheet" href="styles/style.css">
+
+	<title>Crea tu CV</title>
 </head>
-<body class="body">
+<body>
+	<main class="background">
+<div class="principal-logo"><img src="images/logo.png" alt=""></div>
+		<h1 class="title"><a href="formpage.html#header">Crea tu CV</a></h1>
+  	</main>
 
-	<header id="header" class="header">
-		<div class="logo-cabecera">
-			<img src="images/logo.png" alt="logo-equipo"/>
-		</div>
-			<nav>
-				<ul class="menu">
-						<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
-						<li><img class="preview" src="images/preview1.jpg" alt="vista previa"></li>
-						<li><img class="print" src="images/imprimir.jpg" alt="icono imprimir"></li>
-						<li><a href="about-us.html">About us</a></li>
-				</ul>
-
-			</nav>
-
-		</header>
-
-	<section class="personalizatucv">
-<h1>Crea tu propio CV</h1>
-			<ul>
-				<li class="perscolor"><img src="images/paleta.png"></li>
-				<li class="persfuente"><img src="images/fuente.png"</li>
-				<li class="persestilo"><img src="">otro</li>
-			</ul>
-			</section>
-	<section class="forms">
-		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
-
-			<!-- Datos personales -->
-			<fieldset id="perdetfiel" class="section">
-				<legend>Datos personales
-					<input type="button" name="btnPersonalData" class="btnSection btnPersonalData" onclick="mostrarOcultar('personal-data')">
-				</legend>
-					<div id="personal-data" class="boxfield">
-						<div class="input-form photo">
-							<label for="photo">Introduce tu foto</label>
-							<input id="photo" type="file" name="photo" accept="image/*" onclick="seleccionar('foto', Sube tu foto)">
-						</div>
-						<div class="input-form">
-							<label for="name">Nombre*</label>
-							<input id="name" type="text" name="name" required onclick="seleccionar('nombre', 'Introduce tu nombre')">
-						</div>
-						<div class="input-form">
-							<label for="surnames" required>Apellidos*</label>
-							<input id="surnames" type="text" name="surnames" required onclick="seleccionar('apellidos', 'Introduce tus apellidos')">
-						</div>
-						<div class="input-form">
-							<label for="email">Email*</label>
-							<input id="email" type="email" name="email" required onclick="seleccionar('mail', 'Introduce tu email')">
-						</div>
-						<div class="input-form">
-							<label for="phone">Teléfono</label>
-							<input id="tel" type="tel" name="phone" onclick="seleccionar('telefono', 'Introduce tu número de teléfono')">
-						</div>
-						<div class="input-form">
-							<label for="socialmedia">Redes Sociales</label>
-							<input id="socialmedia" type="text" name="socialmedia" onclick="seleccionar('rrss', 'Introduce los enlaces a tus redes sociales')">
-						</div>
-						<div class="input-form">
-							<label for="address">Dirección</label>
-							<input id="address" type="text" name="address" onclick="seleccionar('direccion', 'Introduce tu dirección')">
-						</div>
-						<div class="input-form">
-							<label for="profession">Profesión*</label>
-							<input id="profession" type="text" name="profession" required onclick="seleccionar('profesion', 'Introduce tu profesion')">
-						</div>
-						<div class="input-form">
-							<label for="summary">Extracto</label>
-							<textarea id="summary" name="comments"    rows="6"    cols="40" onclick="seleccionar('resumen', 'Escribe tu presentación')"></textarea>
-						</div>
-						<div class="input-form-buttoms">
-							<input type="button" name="edit" value="Editar">
-							<input type="button" name="edit" value="Borrar">
-					  	<input type="button" name="edit" value="Guardar">
-						</div>
-					</div>
-
-			</fieldset>
-
-			<!-- experiencia laboral -->
-			<fieldset id="jobfiel" class="section">
-				<legend>Experiencia Laboral <input type="button" name="btnJob" class="btnSection btnJob" onclick="mostrarOcultar('job-data')"></legend>
-					<div id="job-data" class="boxfield">
-						<div class="input-form">
-							<label for="job">Puesto de trabajo</label>
-							<input id="job" type="text" name="job" onclick= "seleccionar('trabajo', 'Indica tu puesto de trabajo')">
-						</div>
-						<div class="input-form">
-							<label for="job-charge">Cargo:</label>
-							<input id="job-charge" type="text" name="job-charge" onclick="seleccionar('cargo', 'Dime tu cargo')">
-						</div>
-						<div class="input-form">
-							<label for="job-bussines">Empresa:</label>
-							<input id="job-bussines" type="text" name="job-bussines" onclick="seleccionar('empresa', 'Dime tu empresa')">
-						</div>
-						<div class="input-form date">
-							<div class="input-form initialmonth">
-								<label for="job-month-start">Mes de inicio</label>
-								<select id="job-month-start" name="job-month-start" class="month" onclick="seleccionar('inicio-mes', 'Mes de inicio')"></select>
-							</div>
-							<div class="input-form initialyear">
-								<label for="job-year-start">Año de inicio</label>
-								<select id="job-year-start" name="job-year-start" class="years" onclick="seleccionar('inicio-año', 'Año de inicio')"></select>
-							</div>
-						</div>
-						<div class="input-form date">
-							<div class="input-form finalmonth">
-								<label for="job-month-end">Mes de final</label>
-								<select id="job-month-end" name="job-month-end" class="month" onclick="seleccionar('fin-mes', 'Mes de final')"></select>
-							</div>
-							<div class="input-form finalyear">
-								<label for="job-year-end">Año de final</label>
-								<select id="job-year-end" name="job-year-end" class="years" onclick="seleccionar('fin-año', 'Año de final')"></select>
-							</div>
-						</div>
-
-						<div class="input-form">
-							<label for="messjob-extract">Descripción del cargo</label>
-							<textarea class="" id="job-extract" name="job-extract" rows="6" cols="40" onclick="seleccionar('descripcion-trabajo', 'Describe tus funciones en el puesto')"></textarea>
-						</div>
-						<div class="input-form-buttoms">
-							<input type="button" name="edit" value="Editar">
-							<input type="button" name="edit" value="Borrar">
-					  	<input type="button" name="edit" value="Guardar">
-						</div>
-
-					</div>
-
-			</fieldset>
-
-			<!-- experiencia educativa -->
-			<fieldset id="edufiel" class="section">
-				<legend>Educación <input type="button" name="btnEducation" class="btnSection btnEducation" onclick="mostrarOcultar('education-data')"> </legend>
-					<div id="education-data" class="boxfield">
-					 	<div class="input-form">
-							<label for="education-studies">Titulación</label>
-							<input type="text" id="education-studies" name="education-studies" onclick=" seleccionar('titulacion', 'Indica tus estudios')" required>
-						</div>
-						<div class="input-form">
-							<label for="education-type-studies">Tipo de estudios</label>
-							<select id="education-type-studies" name="education-type-studies" class="type-studies" onclick=" seleccionar('tipo-estudios', 'Selecciona tu nivel de estudios')" required></select>
-						</div>
-						<div class="input-form">
-							<label for="education-institution">Centro de estudios</label>
-							<input class="" type="text" id="education-institution" name="education-institution" onclick=" seleccionar('centro', 'Indica tu centro de estudios')" required>
-						</div>
-						<div class="input-form date">
-							<div class="input-form initialyear">
-								<label for="education-year-start">Año de inicio</label>
-								<select id="education-year-start" name="education-year-start" class="years" onclick=" seleccionar('año-inicio', 'Año de inicio')"></select>
-							</div>
-							<div class="input-form finalyear">
-								<label for="education-year-end">Año de finalización</label>
-								<select id="education-year-end" name="education-year-end" class="years" onclick=" seleccionar('año-fin', 'Año de finalización')"></select>
-							</div>
-						</div>
-						<div class="input-form">
-							<label for="education-extract">Descripción</label>
-							<textarea class="" id="education-extract" name="education-extract" rows="6" cols="40" onclick=" seleccionar('descripcion-estudios', 'Escribe una breve descripción de tus estudios')"></textarea>
-						</div>
-						<div class="input-form-buttoms">
-							<input type="button" name="edit" value="Editar">
-							<input type="button" name="edit" value="Borrar">
-					  	<input type="button" name="edit" value="Guardar">
-						</div>
-				</div>
-
-
-			</fieldset>
-
-			<!-- habilidades -->
-
-			<fieldset id="skillsfiel" class="section">
-				<legend>Habilidades <input type="button" name="btnSkills" class="btnSection btnSkills" onclick="mostrarOcultar('skills-data')"> </legend>
-					<div id="skills-data" class="boxfield">
-
-						<div class="input-form-skills">
-							<label for="skillstext">Habilidades</label>
-							<input id="skillstext" type="text" name="skillstext" class="skillstext">
-						</div>
-
-
-
-
-							<div class="input-form-beginner">
-							<label for="nivel1">Principiante</label>
-							<input id="nivel1" type="radio" name="nivel" class="nivel">
-						</div>
-						<div class="input-form-medio">
-							<label for="nivel2">Medio</label>
-							<input id="nivel2" type="radio" name="nivel" class="nivel">
-						</div>
-						<div class="input-form-expert">
-							<label for="nivel3">Experto</label>
-							<input id="nivel3" type="radio" name="nivel" class="nivel">
-						</div>
-						<div class="input-form-buttoms">
-							<input type="button" name="edit" value="Editar">
-							<input type="button" name="edit" value="Borrar">
-					  	<input type="button" name="edit" value="Guardar">
-						</div>
-					</div>
-
-			</fieldset>
-
-			<!-- otros datos-->
-			<fieldset  id="otherdetfiel" class="section">
-
-				<legend>Otros datos de interés <input type="button" name="btnOtherDetails" class="btnSection btnOtherDetails" onclick="mostrarOcultar('other-data')"></legend>
-					<div id="other-data" class="boxfield">
-						<div class="input-form">
-							<label for="details">Datos de interés</label>
-							<input id="details" type="text" name="details" class="details">
-						</div>
-						<div class="input-form-rellenar">
-							<input type="button" value="rellenar" onclick="rellenar">
-						</div>
-						<div class="input-form-buttoms">
-							<input type="button" name="edit" value="Editar">
-							<input type="button" name="edit" value="Borrar">
-					  	<input type="button" name="edit" value="Guardar">
-						</div>
-					</div>
-
-			</fieldset>
-		</form>
-	</section>
-
-	<main class="cv">
-		<section class="prev-info-personaldates prev-contact">
-			<h1 class="prev-titles">Datos de contacto</h1>
-				<div class="prev-photo">
-					<img src="http://via.placeholder.com/120x120" alt="Foto Personal" id="foto">
-				</div>
-				<ul class="prev-contactdetails">
-					<li id="nombre" class="prev-contactdetails-name">Nombre</li>
-					<li id="apellidos" class="prev-contactdetails-surname">Apellidos</li>
-					<li id="profesion" class="prev-contactdetails-proffession">Profesión</li>
-					<li id="direccion" class="prev-contactdetails-address"></li>
-					<li id="mail" class="prev-contactdetails-email">ejemplo@gmail.com</li>
-					<li id="telefono" class="prev-contactdetails-phone">666998811</li>
-					<li id="rrss" class="prev-contactdetails-socialmedia">RRSS</li>
-				</ul>
-		</section>
-		<section class="prev-description">
-			<h2 class="prev-titles">Extracto<hr></h2>
-				<p id="resumen">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-		</section>
-		<div class="prev-content">
-			<section class="prev-info-experience">
-					<section class="prev-education">
-						<h2 class="prev-titles">Formación académica<hr></h2>
-							<ul class="prev-educationdetails">
-								<li id="educationdetails-studies" class="prev-educationdetails-studies">Titulación: <span id="titulacion"></span></li>
-								<li id="educationdetails-type-studies" class="prev-educationdetails-type-studies">Tipo de estudios: <span id="tipo-estudios"></span></li>
-								<li id="educationdetails-centre" class="prev-educationdetails-centre">Centro de estudios: <span id="centro"></span></li>
-								<li class="prev-educationdetails-date">
-									<ul class="prev-educationdate">
-										<li id="educationdate-start" class="prev-educationdate-start">Año de inicio: <span id="año-inicio"></span></li>
-										<li id="educationdate-end" class="prev-educationdate-end">Año de finalización: <span id="año-fin"></span></li>
-									</ul>
-								</li>
-								<li id="educationdetails-description" class="prev-educationdetails-description">Descripción: <span id="descripcion-estudios"></span></li>
-							</ul>
-					</section>
-
-					<section class="prev-professionalexperience">
-						<h2 class="prev-titles">Formación profesional<hr></h2>
-							<ul class="prev-jobdetails">
-								<li class="prev-jobdetails-job">Puesto de trabajo:  <span id="trabajo"></span></li>
-								<li class="prev-jobdetails-charge">Cargo:  <span id="cargo"></span></li>
-								<li id="jobdetails-company" class="prev-jobdetails-company">Empresa: <span id="empresa"></span></li>
-								<li class="prev-jobdetails-date">
-									<ul class="prev-jobdate">
-										<li id="jobdate-start" class="prev-jobdate-start">Fecha de inicio: <span id="inicio-mes"></span>/<span id="inicio-año"></span></li>
-										<li id="jobdate-end" class="prev-jobdate-end">Fecha de final: <span id="fin-mes"></span>/<span id="fin-año"></span></li>
-									</ul>
-								</li>
-								<li class="prev-jobdetails-description">Descripción del cargo: <span id="descripcion-trabajo"></span></li>
-							</ul>
-					</section>
-			  </section>
-			<section class="prev-info-extra">
-				<section class="prev-skills">
-					<h2 class="prev-titles">Habilidades<hr></h2>
-				</section>
-
-				<section class="prev-interestdetails">
-					<h2 class="prev-titles">Otros datos de interés<hr></h2>
-				</section>
-			</section>
-		</div>
-	</main> -->
-
-	 <footer class="footer">
+	<footer class="footer">
 		<p class="copy">Copyright &copy;NaN!</p>
-		<div class="up-button"><a href="#personsaldetails-content">up-button</a>
 		</div>
 	</footer>
-
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/datospers.js"></script>
 </body>
 </html>
