--- a/about-us.html
+++ b/about-us.html
@@ -26,9 +26,9 @@
 
 		</header>
 	<main class="principal-content">
-		<h1 class="title">Un poco sobre nosotras</h1>
+		<h1 class="title-contact">Un poco sobre nosotras</h1>
 		<p class="paragraph">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-		<h2 class="subtitle">Cómo contactar con nosotras</h2>
+		<h2 class="subtitle-contact">Cómo contactar con nosotras</h2>
 		<p class="paragraph">Si tienes cualquier duda o sugerencia ponte en contacto con nosotras rellenando el formulario que encontrarás debajo. Cualquier información nos será útil para mejorar nuestra página y estaremos encantadas de solucionar cualquier problema que tengáis o resolver cualquier duda.</p>
 		<p class="paragraph">Muchas gracias por confiar en <span class="important"><strong>NaN!</strong></span></p>
 		<form class="contact-form" method="post" class="total-form" enctype="multipart/form-data">
