link menu to formpage.html

--- a/about-us.html
+++ b/about-us.html
@@ -12,7 +12,7 @@
 <body>
 	<header id="header" class="header">
 		<div class="logo-cabecera">
-			<img src="images/logo.png" alt="logo-equipo"/>
+			<a href="formpage.html"><img src="images/logo.png" alt="logo-equipo"/></a>
 		</div>
 			<nav>
 				<ul class="menu">
