--- a/formpage.html
+++ b/formpage.html
@@ -27,15 +27,16 @@
 
 		</header>
 
-	<section class="personalizatucv">
-<h1>Crea tu propio CV</h1>
-			<ul>
-				<li class="perscolor"><img src="images/paleta.png"></li>
-				<li class="persfuente"><img src="images/fuente.png"</li>
-				<li class="persestilo"><img src="">otro</li>
-			</ul>
-			</section>
+
 	<section class="forms">
+		<section class="personalizatucv">
+	<h1>Crea tu propio CV</h1>
+				<ul class="personalizar">
+					<li class="perscolor"><img src="images/paleta.png"></li>
+					<li class="persfuente"><img src="images/fuente.png"</li>
+					<li class="persestilo"><img src="">otro</li>
+				</ul>
+				</section>
 		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
 
 			<!-- Datos personales -->
