--- a/formpage.html
+++ b/formpage.html
@@ -18,9 +18,9 @@
 			<nav>
 				<ul class="menu">
 						<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
-						<li><img class="preview" src="images/preview1.jpg" alt="vista previa"></li>
-						<li><img class="print" src="images/imprimir.jpg" alt="icono imprimir"></li>
-						<li><a href="about-us.html">About us</a></li>
+						<li><img class="preview" src="images/preview1.svg" alt="vista previa"></li>
+						<li><img class="print" src="images/print.svg" alt="icono imprimir"></li>
+						<li><a href="about-us.html"><img class="preview" src="images/aboutus.svg" alt="about us"></a></li>
 				</ul>
 
 			</nav>
@@ -34,7 +34,7 @@
 				<ul class="personalizar">
 					<li class="perscolor"><img src="images/paleta.png"></li>
 					<li class="persfuente"><img src="images/fuente.png"</li>
-					<li class="persestilo"><img src="">otro</li>
+					<li class="persestilo"><img src="images/escribe.svg"></li>
 				</ul>
 				</section>
 		<form id="personsaldetails-content" method="post" class="total-form" enctype="multipart/form-data">
