--- a/formpage.html
+++ b/formpage.html
@@ -13,7 +13,7 @@
 
 	<header id="header" class="header">
 		<div class="logo-cabecera">
-			<img src="images/logo.png" alt="logo-equipo"/>
+			<img src="images/logo.png" alt="logo-equipo">
 		</div>
 			<nav>
 				<ul class="menu">
