new icons + no persjs

--- a/formpage.html
+++ b/formpage.html
@@ -20,7 +20,7 @@
 						<li><img class="compartir" src="images/compartir2.png" alt="compartir"></li>
 						<li><img class="preview" src="images/preview1.svg" alt="vista previa"></li>
 						<li><img class="print" src="images/print.svg" alt="icono imprimir"></li>
-						<li><a href="about-us.html"><img class="preview" src="images/aboutus.svg" alt="about us"></a></li>
+						<li><a href="about-us.html"><img class="aboutus" src="images/aboutus.svg" alt="about us"></a></li>
 				</ul>
 
 			</nav>
@@ -309,7 +309,7 @@
 				</section>
 			</section>
 		</div>
-	</main> -->
+	</main>
 
 	 <footer class="footer">
 		<p class="copy">Copyright &copy;NaN!</p>
@@ -318,6 +318,6 @@
 	</footer>
 
 	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/datospers.js"></script>
+
 </body>
 </html>
