--- a/formpage.html
+++ b/formpage.html
@@ -41,8 +41,8 @@
 
 			<!-- Datos personales -->
 			<fieldset id="perdetfiel" class="section">
-				<legend>Datos personales
-					<input type="button" name="btnPersonalData" class="btnSection btnPersonalData" onclick="mostrarOcultar('personal-data')">
+				<legend class="datospergloria">Datos personales
+					<input type="button" name="btnPersonalData" class="btnSection btnPersonalData">
 				</legend>
 					<div id="personal-data" class="boxfield">
 						<div class="input-form photo">
